--- a/assets/css/flexbox/flexbox-direction.css
+++ b/assets/css/flexbox/flexbox-direction.css
@@ -93,3 +93,36 @@ h1 {
 .mb-2{
     margin-bottom: 8px;
 }
+
+.flex-altura{
+    min-height: 120px;
+}
+.item-baixo{
+    font-size: 12px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+.item-medio{
+    font-size: 16px;
+    padding: 10px;
+}
+.item-alto{
+    font-size: 20px;
+    padding-top: 5px;
+    padding-bottom: 20px;
+}
+.align-items-flex-start{
+    align-items: flex-start;
+}
+.align-items-center{
+    align-items: center;
+}
+.align-items-flex-end{
+    align-items: flex-end;
+}
+.align-items-stretch{
+    align-items: stretch;
+}
+.align-items-baseline{
+    align-items: baseline;
+}
